--- a/dotuser/.mozilla/firefox/chrome/userContent.css
+++ b/dotuser/.mozilla/firefox/chrome/userContent.css
@@ -1,3 +1,4 @@
+/* Process the video and img to grayscale(将视频和图片处理为灰度) */
 video {
   filter: grayscale(1) invert(1);
 }
@@ -5,3 +6,58 @@ video {
 img {
   filter: grayscale(1);
 }
+
+
+/* Blocking recommended content(屏蔽推荐内容) */
+/* Block follower, recommendations, hot lists, and videos from the Zhihu homepage(屏蔽知乎首页的关注,推荐,热榜,视频) */
+@-moz-document domain("zhihu.com") {
+  .Topstory-content {
+    display: none !important;
+  }
+}
+
+/* Block video recommendations on Bilibili homepage(屏蔽哔哩哔哩首页的视频推荐) */
+@-moz-document domain("bilibili.com") { 
+   .container.is-version8 {
+    display: none !important;
+  }
+}
+
+/* Block video categories on Bilibili homepage(屏蔽哔哩哔哩首页的视频分类) */
+@-moz-document domain("bilibili.com") {
+  .bili-header__channel {
+    display: none !important;
+  }
+}
+
+/* Block video recommendations when playing videos on Bilibili(屏蔽哔哩哔哩播放视频时的视频推荐) */
+@-moz-document domain("bilibili.com") {
+  .recommend-list-v1 {
+    display: none !important;
+  }
+}
+
+/* Block the upper left column of Bilibili(屏蔽哔哩哔哩的左上栏目) */
+@-moz-document domain("bilibili.com") {
+  .left-entry {
+    display: none !important;
+  }
+}
+
+
+/* Block pictures(屏蔽图片) */
+/* Block images on Bilibili search videos(屏蔽哔哩哔哩搜索视频上的图片) */
+@-moz-document domain("bilibili.com") {
+  .bili-video-card__image.__scale-player-wrap {
+    display: none !important;
+  }
+}
+
+/* Block background images on Bilibili(屏蔽哔哩哔哩的背景图片) */
+@-moz-document domain("bilibili.com") {
+  .bili-header__banner {
+    display: none !important;
+  }
+}
+
+
