firefox css fix

--- a/dotuser/.mozilla/firefox/chrome/userContent.css
+++ b/dotuser/.mozilla/firefox/chrome/userContent.css
@@ -1,4 +1,4 @@
-/* Process the video and img to grayscale(将视频和图片处理为灰度) */
+/* Process the video and img to grayscale, invert video colors(将视频和图片处理为灰度,反转视频颜色) */
 video {
   filter: grayscale(1) invert(1);
 }
