optimize android firefox css again

--- a/dotuser/.mozilla/firefox/chrome/userContent.css
+++ b/dotuser/.mozilla/firefox/chrome/userContent.css
@@ -17,6 +17,7 @@ img {
   }
 
   /* Mobile version(手机端) */
+  .List,
   .TopstoryMain {
     display: none !important; /* Hide Zhihu's top story content (隐藏知乎首页推荐内容) */
   }
